--- a/_posts/2017-05-19-为什么要写blog.md
+++ b/_posts/2017-05-19-为什么要写blog.md
@@ -9,4 +9,4 @@ tags: blog
 
 当然除了提高学习效率之外，长时间训练写作有利于锻炼自己的表达能力，以及集中思考的能力，生活中太多琐碎信息影响着我们集中思考的能力。
 
-另外一点就是，写博客可以记录自己的成长过程，当时间冲淡自己的记忆，那些曾经重要的不重要的都渐渐模糊，文字却可以记载下当年的泪水与喜悦，勇气与坚持，朝气与梦想，固执与妥协，让自己知道自己没有白活一趟。
+另外一点就是，写博客可以记录自己的成长过程，如果没有记录，有时候生活就好像不曾发生过一样。
