--- a/_posts/2017-05-19-为什么要写blog.md
+++ b/_posts/2017-05-19-为什么要写blog.md
@@ -4,7 +4,7 @@ title: 为什么要写blog
 categories: Writing
 tags: blog
 ---
-其实本科在新东方学英语的时候就已经了解到学历过程中输出的重要性，但是迫于自己拖延症严重而迟迟没有行动。
+其实本科在新东方学英语的时候就已经了解到学习过程中输出的重要性，但是迫于自己拖延症严重而迟迟没有行动。
 前两天又重燃起了写博客的想法，因为又看到了学习金字塔原理（美国缅因州国家训练实验室研究成国）， 简单来说就是学习效率由听讲-阅读-视听-看演示-讨论-实践-教授他人逐渐提升，其中learn by teaching效率最高，而写作就可以很好的模拟learn by teaching。
 
 当然除了提高学习效率之外，长时间训练写作有利于锻炼自己的表达能力，以及集中思考的能力，生活中太多琐碎信息影响着我们集中思考的能力。
